[project]
name = "agent-migrate"
version = "0.1.0"
description = "An LLM authors a schema migration, verifies it on a scoped keon sandbox, and promotes it to main only on explicit confirmation."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
agent-migrate = "agent_migrate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_migrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
