[project]
name = "branch-test"
version = "0.1.0"
description = "Fork a Kisenon main branch, run your migration tool, report JSON. Two-step promote (you re-run against main yourself)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
branch-test = "branch_test.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/branch_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
