[project]
name = "sample-alembic"
version = "0.0.0"
description = "Tiny SQLAlchemy app + Alembic migrations for the branch-test demo."
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_alembic"]
